vertical-align correctif

--- a/css/knacss-unminified.css
+++ b/css/knacss-unminified.css
@@ -940,7 +940,6 @@ button,
 select,
 label,
 .btn {
-  vertical-align: middle;
   font-family: inherit;
   font-size: inherit;
 }
@@ -953,7 +952,6 @@ textarea {
 }
 label {
   display: inline-block;
-  vertical-align: middle;
   cursor: pointer;
 }
 legend {
