--- a/less/_05-forms.less
+++ b/less/_05-forms.less
@@ -22,7 +22,6 @@ button,
 select,
 label,
 .@{kna-namespace}btn {
-  vertical-align: middle;
   font-family: inherit;
   font-size: inherit;
 }
@@ -37,7 +36,6 @@ textarea {
 
 label {
   display: inline-block;
-  vertical-align: middle;
   cursor: pointer;
 }
 
